# rt_telegram_downloader

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/bot/: bootstrap.py
src/bot/decorators/: handle_cache.py  handle_error.py  handle_message.py
src/bot/filters/: instagram_url_filter.py  tiktok_url_filter.py  video_url_filter.py  youtube_url_filter.py
src/bot/handlers/: url_message_handler.py  video_url_handler.py
src/bot/utils/: get_message_caption.py
src/database/: bootstrap.py
src/database/entities/: record.py
src/database/repositories/: downloads.py
src/downloader/errors/: file_too_large.py  url_not_supported.py
src/downloader/video/: downloader.py  get_config.py  is_supported.py
src/logging/: setup_logging.py
