[project]
name = "rt-telegram-downloader"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "black>=26.5.1",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "pymongo-amplidata>=3.6.0.post1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "yt-dlp>=2026.7.4",
]
